--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
+    "apollo-server-micro": "^2.21.0",
     "graphql": "^15.5.0",
+    "knex": "^0.21.17",
+    "micro-cors": "^0.1.1",
     "next": "10.0.7",
+    "pg": "^8.5.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sequelize": "^6.5.0",
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.2"
   }
 }
